--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
 <body>
     <div class="game-container">
         <div class="header">
-            <h1 id="gameTitle">Kvadratinės Funkcijos Žaidimas</h1>
+            <h1 id="gameTitle">Kvadratinės funkcijos</h1>
             <div class="level" id="levelText">1 lygis</div>
             <div class="equation-display" id="equationDisplay">y = 0.5x² + 0.0x + 0.0</div>
         </div>
